kubernetes-ingress-hands-on/exercises/09-ingress-class/exercise/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: class-selection
  namespace: ingress-lab
spec:
  ingressClassName: nginx
  rules:
    - host: class.ingress.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  name: http
